--- a/wiki/CodeSamples.wiki
+++ b/wiki/CodeSamples.wiki
@@ -1,44 +1,4 @@
-#summary This page provides some code samples to get you started
-#labels Featured
-
-If you are working on anything later than beta-3 you have to use IsoBufferWrapperImpl instead of IsoBufferWrapper. 
-
-== Opening a file ==
-
-{{{
-    public static void main(String[] args) throws IOException {
-        IsoBufferWrapper isoBufferWrapper = new IsoBufferWrapper(new File(args[0]));
-        IsoFile isoFile = new IsoFile(isoBufferWrapper);
-        isoFile.parse();
-}}}
-
-== Getting a Specific Box ==
-
-This example shows how you can use an XPath style approach to get and replace a Box and to write the changed MP4 to an OutputStream.
-
-{{{
-public static void main(String[] args) throws IOException {
-        IsoBufferWrapper isoBufferWrapper = new IsoBufferWrapper(new File(args[0]));
-        IsoFile isoFile = new IsoFile(isoBufferWrapper);
-        isoFile.parse();
-        AppleItemListBox appleItemListBox =
-                (AppleItemListBox) IsoFileConvenienceHelper.get(isoFile, "moov/udta/meta/ilst");
-        AppleAlbumBox appleAlbumBox =
-                (AppleAlbumBox) IsoFileConvenienceHelper.get(appleItemListBox, "\u00a9alb");
-        if (appleAlbumBox != null) {
-            appleItemListBox.removeBox(appleAlbumBox);
-        }
-
-        AppleAlbumBox albumBox = new AppleAlbumBox();
-        albumBox.setValue("my album");
-        appleItemListBox.addBox(albumBox);
-        System.err.println(isoFile);
-
-        isoFile.getBox(new IsoOutputStream(new ByteArrayOutputStream()));
-    }
-}}}
-
-== Only parse boxes you are interested in ==
+= Only parse boxes you are interested in =
 
 {{{
   public static void main(String[] args) throws IOException {
