--- a/wiki/SmoothStreaming.wiki
+++ b/wiki/SmoothStreaming.wiki
@@ -17,16 +17,23 @@ I use the version big_buck_bunny_720p_surround.avi in my example (and I took mos
 
 video:
 
+This probably not the best way to encode the video but I'm a container guy - not an encoder guy - plus I cannot really use the work done by my co-worker Christian without asking I'm just using the most simple way of creating the files. 
+
+This creates the first pass log file. 
 {{{
-ffmpeg -i big_buck_bunny_720p_surround.avi -an -g 100 -keyint_min 50 -flags2 -mbtree  -pass 1 -b 230k -s 224x92 big_buck_bunny_230k.mp4
-ffmpeg -i big_buck_bunny_720p_surround.avi -an -g 100 -keyint_min 50 -flags2 -mbtree  -pass 2 -b 230k -s 224x92 big_buck_bunny_230k.mp4 
-ffmpeg -i big_buck_bunny_720p_surround.avi -an -g 100 -keyint_min 50 -flags2 -mbtree  -pass 2 -b 331k -s 288x120 big_buck_bunny_331k.mp4 
-ffmpeg -i big_buck_bunny_720p_surround.avi -an -g 100 -keyint_min 50 -flags2 -mbtree  -pass 2 -b 477k -s 368x152 big_buck_bunny_477k.mp4 
-ffmpeg -i big_buck_bunny_720p_surround.avi -an -g 100 -keyint_min 50 -flags2 -mbtree  -pass 2 -b 688k -s 448x188 big_buck_bunny_688k.mp4 
-ffmpeg -i big_buck_bunny_720p_surround.avi -an -g 100 -keyint_min 50 -flags2 -mbtree  -pass 2 -b 991k -s 592x248 big_buck_bunny_991k.mp4 
-ffmpeg -i big_buck_bunny_720p_surround.avi -an -g 100 -keyint_min 50 -flags2 -mbtree  -pass 2 -b 1427k -s 768x320  big_buck_bunny_1427k.mp4 
-ffmpeg -i big_buck_bunny_720p_surround.avi -an -g 100 -keyint_min 50 -flags2 -mbtree  -pass 2 -b 2056k -s 992x412  big_buck_bunny_2056k.mp4 
-ffmpeg -i big_buck_bunny_720p_surround.avi -an -g 100 -keyint_min 50 -flags2 -mbtree  -pass 2 -b 2962k -s 1280x536  big_buck_bunny_2962k.mp4
+ffmpeg -y -i big_buck_bunny_720p_surround.avi -an -g 100 -keyint_min 50 -flags2 -mbtree  -pass 1 -b 600k -s 448x188 not_used.mp4
+}}}
+
+These commands use that log file. 
+{{{
+ffmpeg -y -i big_buck_bunny_720p_surround.avi -an -g 100 -keyint_min 50 -flags2 -mbtree  -pass 2 -b 230k -s 224x92 big_buck_bunny_230k.mp4 
+ffmpeg -y -i big_buck_bunny_720p_surround.avi -an -g 100 -keyint_min 50 -flags2 -mbtree  -pass 2 -b 331k -s 288x120 big_buck_bunny_331k.mp4 
+ffmpeg -y -i big_buck_bunny_720p_surround.avi -an -g 100 -keyint_min 50 -flags2 -mbtree  -pass 2 -b 477k -s 368x152 big_buck_bunny_477k.mp4 
+ffmpeg -y -i big_buck_bunny_720p_surround.avi -an -g 100 -keyint_min 50 -flags2 -mbtree  -pass 2 -b 688k -s 448x188 big_buck_bunny_688k.mp4 
+ffmpeg -y -i big_buck_bunny_720p_surround.avi -an -g 100 -keyint_min 50 -flags2 -mbtree  -pass 2 -b 991k -s 592x248 big_buck_bunny_991k.mp4 
+ffmpeg -y -i big_buck_bunny_720p_surround.avi -an -g 100 -keyint_min 50 -flags2 -mbtree  -pass 2 -b 1427k -s 768x320  big_buck_bunny_1427k.mp4 
+ffmpeg -y -i big_buck_bunny_720p_surround.avi -an -g 100 -keyint_min 50 -flags2 -mbtree  -pass 2 -b 2056k -s 992x412  big_buck_bunny_2056k.mp4 
+ffmpeg -y -i big_buck_bunny_720p_surround.avi -an -g 100 -keyint_min 50 -flags2 -mbtree  -pass 2 -b 2962k -s 1280x536  big_buck_bunny_2962k.mp4
 }}}
 
 audio:
